networking/higress/resources/mcp/servers/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-searxng
  namespace: higress-system
  annotations:
    higress.io/backend-protocol: HTTP
    higress.io/destination: searxng-mcp.dns
spec:
  ingressClassName: higress
  rules:
    - host: llm.drmarchent.com
      http:
        paths:
          - path: /mcp/servers/searxng
            pathType: Prefix
            backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
    - host: higress-internal.higress-system.svc.cluster.local
      http:
        paths:
          - path: /mcp/servers/searxng
            pathType: Prefix
            backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
